@startuml
skinparam classAttributeIconSize 0
set namespaceSeparator none

package "network.transport" {
    
    class Sock {
        + addr: Addr
        + close()
        + fileno(): int
    }
    
    class Synchronizer {
        + last_raw_input: str
        + all_sent: bool
        + all_recv: bool
        + sync_input(pending: str)
        + unsync()
    }

    interface Communicator {
    }

    class Receiver {
        + empty_buf(): bool
        + consume(bufsize: int): str
        + consume_crlf(): str
        + restore_buf(idx: int)
        + recv(bufsize: int): int
        + cleanup()
    }

    class Sender {
        + add_pending(pending: str)
        + has_pending(): bool
        + get_first_pending(): str | bytes
        + rem_first_pending()
        + shrink_first_pending(remaining: bytes)
        + send(data: bytes): int
    }
}

package "network" {
    abstract class Transmitter {
        + sock: Sock
        + receiver: Receiver
        + sender: Sender
        + synchronizer: Synchronizer
        + addr: Addr
        + close()
        + fileno(): int
    }

    abstract class Identification {
        + {static} DEFAULT_HOST: str
        + {static} DEFAULT_PORT: str
        + {static} DEFAULT_USER: str
        + {static} HELLO_CMD: str
        + initial_user: str
        + initial_pasw: str
        + say_hello(user: str, pasw: str, protver: int)
    }

    abstract class DatabaseLink {
        + {static} DEFAULT_DB: str
        + {static} SELECT_CMD: str
    }

    class Connection {
        + {static} count: int
        + close()
    }
}

' --- Inheritance Relationships ---

Communicator <|.. Receiver
Communicator <|.. Sender

Transmitter <|-- Identification
Identification <|-- DatabaseLink
DatabaseLink <|-- Connection

' --- Aggregation Relationships ---

Transmitter o-up- "1" Sock
Transmitter o-up- "1" Receiver
Transmitter o-up- "1" Sender
Transmitter o-up- "1" Synchronizer

@enduml
